[package]
name = "lockstep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cargo_toml = "0.11.5"
git2 = "0.14.2"
toml = "0.5.8"
reqwest = { version = "0.11.10", features = ["default", "blocking" ] }
omicron-package = { git = "https://github.com/oxidecomputer/omicron", branch = "main" }
glob = "0.3"
